Fixed comment alert visibility (text colour issue)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,7 @@ body {
     color: #fff;
 }
 
-.modal-body, .modal-title {
+.modal-body, .modal-title, body .alert {
     color: #143601;
 }
 
